# prueba_tecnica_DiAngTech

./: .dockerignore  .gitignore  DECISIONS.md  Dockerfile  README.md  alembic.ini  dev.env  docker-compose.yml  hello.py  main.py  prod.env  pyproject.toml  render.yaml  requeriments.txt
alembic/: env.py
alembic/versions/: 2025_11_02_1345-be9c4339378e_create_database.py  2025_11_02_1827-647860766868_add_bio_and_avatar_columns_to_user_account_table.py  2025_11_02_1955-55168fd74afd_add_tag_and_post_tag_with_bidirectional_.py  2025_11_03_0740-a9a2e5eab193_add_user_id_to_tag_table.py
src/: main.py  models.py
src/api/: exception_handlers.py  main.py  security.py
src/api/routers/: comment_router.py  post_router.py  register_login.py  tag_router.py  user_router.py
src/core/: database.py
src/models/: mixins.py  models.py
src/repositories/: exceptions.py  repository_base.py  repository_post.py  repository_post_memory.py  repository_user_memory.py  repository_user_postgres.py
src/repositories/comment/: repository_comment_memory.py  repository_comment_postgres.py
src/repositories/post/: repository_post_memory.py  repository_post_postgres.py
src/repositories/tag/: repository_tag_memory.py  repository_tag_postgres.py
src/repositories/user/: repository_user_memory.py  repository_user_postgres.py
src/schemas/: comment.py  pagination.py  post.py  security.py  tags.py  user.py
src/services/: use_cases_comment.py  use_cases_post.py  use_cases_tag.py  use_cases_user.py
src/tests/: pytest.ini
src/tests/integration/: test_use_cases_comment.py  test_use_cases_tag.py  (+2 more)
(+1 files in other folders)
