[project]
name = "prueba-tecnica-diangtech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "fastapi[standard]>=0.120.4",
    "pydantic>=2.12.3",
    "pytest-asyncio>=1.2.0",
    "pytest>=8.4.2",
    "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
