[project]
name = "prueba-tecnica-diangtech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "asyncpg>=0.29.0",
    "fastapi[standard]>=0.120.4",
    "pydantic>=2.12.3",
    "pytest-asyncio>=1.2.0",
    "pytest>=8.4.2",
    "sqlalchemy[asyncio]>=2.0.44",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
